--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,9 @@
     transform: rotate(360deg);
   }
 }
+.query{
+  margin: 10px;
+  background-color: bisque;
+  padding: 10px;
+  border-radius: 10px;
+}
