--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -13,3 +13,12 @@
     margin: 5px;
     position: sticky;
 }
+@media only screen and (max-width:600px) {
+    .shop-container{
+        grid-template-columns: 1fr 1fr;
+    }
+    .products-container{
+        display: flex;
+        flex-direction: column;
+    }
+}
